package team.mephi.hackathon.repository;

import java.util.List;
import java.util.Optional;
import java.util.UUID;
import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.data.jpa.repository.JpaSpecificationExecutor;
import org.springframework.data.jpa.repository.Query;
import org.springframework.stereotype.Repository;
import team.mephi.hackathon.entity.Transaction;

@Repository
public interface TransactionRepository
    extends JpaRepository<Transaction, UUID>, JpaSpecificationExecutor<Transaction> {

  @Query("SELECT t FROM Transaction t WHERE t.status <> 'DELETED'")
  List<Transaction> findAllActive();

  Optional<Transaction> findById(UUID id);
}
